fix: Layout dark theme has wrong background colors

--- a/styles/layout/RightSidebar.module.scss
+++ b/styles/layout/RightSidebar.module.scss
@@ -1,5 +1,6 @@
 .container {
   width: 300px;
+  border-right: 1px solid rgba(255, 255, 255, .05);
   .logoContainer {
     padding: 0 34px;
     height: 112px;
